--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,13 @@ flask-cors==4.0.0
 flask-sqlalchemy==3.1.1
 
 psycopg2-binary==2.9.9
-sqlalchemy==2.0.44
+sqlalchemy==2.1.0
 
 gunicorn==21.2.0
 
+# ML Model (lightweight version)
 transformers==4.36.0
-torch==2.5.0
 sentencepiece==0.2.0
-protobuf==4.25.0
 
 werkzeug==3.0.1
 python-dotenv==1.0.0
