--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,11 @@
 Flask==3.0.0
 flask-cors==4.0.0
 flask-sqlalchemy==3.1.1
-
 psycopg2-binary==2.9.9
 sqlalchemy==2.0.44
-
 gunicorn==21.2.0
-torch==2.5.0
-sentencepiece==0.2.0
-
 werkzeug==3.0.1
 python-dotenv==1.0.0
 python-dateutil==2.8.2
 requests==2.32.0
+groq==0.11.0
